--- a/style/composition.css
+++ b/style/composition.css
@@ -4,7 +4,7 @@
     height: 800px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 .leftside {
     display: inline-block;
@@ -51,4 +51,19 @@
     width:  170px;
     height: 30px;
     border: 2px solid black;
+}
+.middleBtn {
+    height: 40px;
+    bottom: 200px;
+    margin-right: 60px;
+    width: 300px;
+    float: right;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: white;
+    transition: 500ms;
+}
+.middleBtn:hover {
+    color: white;
+    background-color: black;
 }
