--- a/style/promo.css
+++ b/style/promo.css
@@ -66,3 +66,41 @@ video {
     position: absolute;
     width: 740px;
 }
+
+@media (max-width:375px) {
+    .promo {
+        width: 370px;
+        margin-left: 12px;
+    }
+    .name-product {
+        width: 350px;
+    }
+    .product-image {
+        width: 170px;
+    }
+    .product-image img {
+        padding-top: 150px;
+        padding-left: 0px;
+        width: 100px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .product-info {
+        font-size: 10px;
+        width: 175px;
+    }
+    .product-info ul {
+        width: 165px;
+    }
+    video {
+        display: none;
+    }
+    .orderBtn {
+        margin-left: 30px;
+        margin-right: 0;
+        float: left;
+        width: 100px;
+        height: 20px;
+    }
+
+}
